create playerCardTemplate in model page

--- a/index.html
+++ b/index.html
@@ -12,26 +12,24 @@
   <title>game_night</title>
 </head>
 
-<body data-bs-theme="light">
+<body data-bs-theme="dark">
   <!-- SECTION -->
   <header>
-    <nav class="navbar bg-codeworks text-light gap-2 px-2">
-      <img src="./assets/img/logo.png" height="45" alt="" loading="lazy">
-      <div><b>game_night</b></div>
+    <nav class="text-center text-light gap-2 px-2 mt-4">
+      <div><b>GAMENIGHT</b></div>
       <div class="ms-auto" id="authstate"></div>
       </div>
     </nav>
   </header>
 
   <main>
-
-
+    <section class="container" id="player-cards">
+      
+    </section>
   </main>
 
   <footer class="text-bg-dark">
-    <div class="text-center">
-      <p class="mb-0"><small>Made with <i class="mdi mdi-heart text-pink"></i> by CodeWorks</small></p>
-    </div>
+
   </footer>
 
   <!-- SECTION links for bootstrap, axios, and auth -->
