--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="./assets/img/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
   <title>game_night</title>
@@ -15,21 +18,50 @@
 <body data-bs-theme="dark">
   <!-- SECTION -->
   <header>
-    <nav class="text-center text-light gap-2 px-2 mt-4">
-      <div><b>GAMENIGHT</b></div>
+    <nav class="text-center title-text gap-2 px-2 mt-4">
+      <div><b class="glowing">GAMENIGHT</b></div>
       <div class="ms-auto" id="authstate"></div>
       </div>
     </nav>
   </header>
 
   <main>
-    <section class="container" id="player-cards">
-      
+    <section class="container">
+      <div id="player-cards" class="row justify-content-between mt-5">
+        
+      </div>
     </section>
   </main>
 
   <footer class="text-bg-dark">
-
+    <section class="container mt-4">
+      <div class="row">
+        <div class="fs-1 add-player-text"><i class="mdi mdi-numeric-positive-1"></i> Add Player</div>
+        <form onsubmit="app.playersController.addPlayer(playerName, playerPicture)">
+          <div class="mb-3 col-md-5 mt-3">
+            <input
+              type="text"
+              class="form-control"
+              name="playerName"
+              placeholder="playerName"
+            />
+          </div>
+          <div class="mb-3 col-md-5 mt-3">
+            <input
+              type="text"
+              class="form-control"
+              name="playerPicture"
+              placeholder="Picture URL"
+            />
+          </div>
+        </div>
+        <div class="col-md-5">
+          <div class="row justify-content-end">
+            <button class="col-2 buttons rounded me-3" type="submit">Submit</button>
+          </div>
+        </div>
+      </form>
+    </section>
   </footer>
 
   <!-- SECTION links for bootstrap, axios, and auth -->
